--- a/Scrapbook101core/Views/Item/Details.cshtml
+++ b/Scrapbook101core/Views/Item/Details.cshtml
@@ -4,99 +4,74 @@
     ViewData["Title"] = "Details";
 }
 
-<p>Details</p>
-
+<div>
+    Details |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Item.Id }) |
+    <a asp-action="Index">Back to List</a>
+</div>
 <div>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="sbs">
         <dt>
             @Html.DisplayNameFor(model => model.Item.Id)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Item.Id)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Item.Type)
+            @Html.DisplayNameFor(model => model.Item.Title)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.Item.Type)
+            @Html.DisplayFor(model => model.Item.Title)
         </dd>
-    </dl>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.AssetPath)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Item.AssetPath)
-        </dd>
-
-        <dt>Assets</dt>
-
-        <dd>
-            <p class="second-level-json">
-                @{
-                    if (Model.Item.Assets != null)
-                    {
-                        foreach (var asset in Model.Item.Assets)
-                        {
-                            @Html.Raw(asset.Name + ", " + asset.Size + "<br/>")
-                        }
-                    }
-                }
-            </p>
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Item.Category)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Item.Category)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Item.AssetPath)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Item.AssetPath)
+        </dd>
+        <dt>Assets</dt>
+        <dd>
+            @{
+                if (Model.Item.Assets != null)
+                {
+                    foreach (var asset in Model.Item.Assets)
+                    {
+                        <p>
+                            @Html.Raw(asset.Name + ", " + asset.Size + "<br/>")
+                        </p>
+                    }
+                }
+            }
         </dd>
 
         <dt>Category Fields</dt>
         <dd>
-            <p class="second-level-json">
-                @{
-                    var activeFields = Model.CategoryFieldMappingList.First(x => string.Compare(x.Name, Model.Item.Category, true) == 0).ActiveFields;
-                    foreach (var field in activeFields)
+            @{
+                var activeFields = Model.CategoryFieldMappingList.First(x => string.Compare(x.Name, Model.Item.Category, true) == 0).ActiveFields;
+                foreach (var field in activeFields)
+                {
+                    string val = "";
+                    if (Model.Item.CategoryFields != null)
                     {
-                        string val = "";
-                        if (Model.Item.CategoryFields != null)
-                        {
-                            val = Model.Item.CategoryFields[field] == null ? "" : Model.Item.CategoryFields[field].ToString();
-                        }
-                        @(Html.DisplayNameFor(x => x.Item.CategoryFields[field])) @Html.Raw(" = ")
-                        @(Html.DisplayFor(x => x.Item.CategoryFields[field])) @Html.Raw("<br/>")
+                        val = Model.Item.CategoryFields[field] == null ? "" : Model.Item.CategoryFields[field].ToString();
                     }
+                    <p>
+                        @Html.Raw(field) @Html.Raw(" = ") @Html.Raw(val)
+                    </p>
                 }
-            </p>
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.DateAdded)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Item.DateAdded)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Item.DateUpdated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Item.DateUpdated)
+            }
         </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Item.Description)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Item.Description)
         </dd>
@@ -118,24 +93,28 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Item.Title)
+            @Html.DisplayNameFor(model => model.Item.DateAdded)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.Item.Title)
+            @Html.DisplayFor(model => model.Item.DateAdded)
         </dd>
-
+        <dt>
+            @Html.DisplayNameFor(model => model.Item.DateUpdated)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Item.DateUpdated)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Item.UpdatedBy)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Item.UpdatedBy)
         </dd>
-
+        <dt>
+            @Html.DisplayNameFor(model => model.Item.Type)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Item.Type)
+        </dd>
     </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
 </div>
