--- a/Scrapbook101core/wwwroot/css/site.css
+++ b/Scrapbook101core/wwwroot/css/site.css
@@ -34,3 +34,25 @@ textarea {
     font-weight: bold;
 }
 
+/* Side by side definition list */
+.sbs {
+    width: 100%;
+}
+
+.sbs dt {
+    float: left;
+    max-width: 15%;
+    font-weight: bold;
+}
+
+.sbs dd {
+    margin-left: 15%;
+    margin-bottom: .25em;
+}
+
+.sbs dd::after {
+    content: " ";
+    display: block;
+    clear: left;
+}
+
